--- a/dis_cli/dis_cli.css
+++ b/dis_cli/dis_cli.css
@@ -17,7 +17,6 @@ DisApp.-show-tree #tree-view {
 
 }
 
-
 #code-view {
     overflow: auto scroll;
     min-width: 100%;
@@ -26,9 +25,18 @@ DisApp.-show-tree #tree-view {
     width: auto;
 }
 
+#left-nums {
+    width: auto;
+    padding-right: 1;
+}
+#right-nums {
+    width: auto;
+    padding-right: 1;
+    padding-left: 1;
+}
 #left {
-    width: 1fr
+    width: 1fr;
 }
 #right {
-    width: 1fr
+    width: auto;
 }
